# glycin

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  Cargo.toml  NEWS  README.md  deny.toml  glycin.doap  meson.build  meson_options.txt
benches/: Cargo.toml  bench-loader.rs  bench-thumbnailer.rs  bench-utils.rs  filesizes.py  loader.rs  test-images  utils.rs
build-aux/: crates-version.py  crates_version.py  dist-vendor.py  dist-vendor.sh  generate-news.py  publish-crates-io.py  publish-crates-io.sh  setup-integration-test.py  update-thumbnailer-mime-types.rs
build-aux/bencher/: Dockerfile  run-benchmarks.bash
build-aux/cross/: cross-windows.txt
docs/1+/: org.gnome.glycin.Editor.xml
docs/2+/: org.gnome.glycin.Editor.xml
docs/website/: build.bash  footer.html  format-details.yml  header.html  list-formats.rs  style.css
glycin/: Cargo.toml
glycin-common/: Cargo.toml
glycin-common/src/: color_profile_preference.rs  error.rs  lib.rs  memory_format.rs  memory_format_selection.rs  operations.rs  shared_memory.rs
glycin-core/: Cargo.toml
glycin-core/src/: api.rs  api_creator.rs  api_editor.rs  api_loader.rs  config.rs  dbus.rs  error.rs  gobject.rs  icc.rs  lib.rs  main_context.rs  pool.rs  sandbox.rs  source.rs  util.rs
glycin-dev-tools/: Cargo.toml
glycin-loaders/: meson.build
glycin-loaders/glycin-heif/: Cargo.toml  glycin-heif.conf
glycin-loaders/glycin-image-rs/: Cargo.toml  glycin-image-rs.conf  glycin-image-rs.thumbnailer.in
glycin-loaders/glycin-image-rs/src/: editor.rs  exr.rs  lib.rs  main.rs
glycin-loaders/glycin-image-rs/src/editor/: jpeg.rs  png.rs  tiff.rs
glycin-loaders/glycin-jpeg2000/: Cargo.toml
glycin-loaders/glycin-jxl/: Cargo.toml  glycin-jxl.conf
glycin-loaders/glycin-jxl/src/: editing.rs  main.rs
glycin-loaders/glycin-raw/: Cargo.toml  glycin-raw.thumbnailer.in
glycin-loaders/glycin-svg/: Cargo.toml
glycin-loaders/glycin-test/: Cargo.toml  glycin-test.conf  glycin-test.thumbnailer.in
glycin-loaders/glycin-test/src/: lib.rs  main.rs
glycin-thumbnailer/: Cargo.toml  meson.build
glycin-thumbnailer/src/: lib.rs  main.rs
glycin-tools/: Cargo.toml
glycin-utils/: Cargo.toml
glycin-utils/src/: api.rs  dbus.rs  dbus_editor_api.rs  dbus_loader_api.rs  dbus_types.rs  editing.rs  error.rs  external_api.rs  image_rs.rs  img_buf.rs  instruction_handler.rs  lib.rs  memory.rs  memory_format.rs  memory_format_selection.rs  operations.rs  save_math.rs  shared_memory.rs
glycin-utils/src/api/: common.rs  editor.rs  loader.rs
glycin-utils/src/editing/: change_memory_format.rs  clip.rs  operations.rs  orientation.rs
glycin-utils/src/external_api/: editor.rs  loader.rs
glycin-utils/src/memory/: shared.rs
glycin/benches/: compare_gdk_pixbuf.rs
glycin/examples/: glycin-render.rs  glycin-rotate-cw.rs
glycin/glycin-builtin/: Cargo.toml
glycin/glycin-external/: Cargo.toml
glycin/src/: api.rs  api_common.rs  api_creator.rs  api_editor.rs  api_encoder.rs  api_loader.rs  config.rs  dbus.rs  error.rs  fontconfig.rs  gobject.rs  icc.rs  lib.rs  memory_texture_builder.rs  orientation.rs  pool.rs  sandbox.rs  util.rs
glycin/src/gobject/: creator.rs  encoded_image.rs  frame.rs  frame_request.rs  image.rs  loader.rs  new_image.rs
libglycin/: Cargo.toml  build.rs  meson.build
libglycin-rebind/: Gly-2.gir  README.md  generator.py
libglycin-rebind/libglycin/: Gir.toml
libglycin-rebind/libglycin-gtk4/: Cargo.toml  Gir.toml
libglycin-rebind/libglycin-gtk4/src/: lib.rs
libglycin-rebind/libglycin-gtk4/src/auto/: mod.rs  versions.txt
libglycin-rebind/libglycin-gtk4/sys/: Cargo.toml  build.rs
libglycin-rebind/libglycin-gtk4/sys/src/: lib.rs
libglycin-rebind/libglycin-gtk4/sys/tests/: layout.c  manual.h
libglycin-rebind/libglycin-rebind/: Cargo.toml  Gir.toml
libglycin-rebind/libglycin-rebind-gtk4/: Cargo.toml
libglycin-rebind/libglycin-rebind-gtk4/src/: lib.rs
libglycin-rebind/libglycin-rebind-gtk4/src/auto/: functions.rs  versions.txt
libglycin-rebind/libglycin-rebind-gtk4/sys/: Cargo.toml  Gir.toml  build.rs
libglycin-rebind/libglycin-rebind-gtk4/sys/src/: lib.rs
libglycin-rebind/libglycin-rebind-gtk4/sys/tests/: abi.rs  constant.c
libglycin-rebind/libglycin-rebind/src/: lib.rs
libglycin-rebind/libglycin-rebind/src/auto/: cicp.rs  creator.rs  encoded_image.rs  enums.rs  flags.rs  frame.rs  frame_request.rs  image.rs  loader.rs  mod.rs  new_frame.rs  versions.txt
libglycin-rebind/libglycin-rebind/sys/: Cargo.toml  Gir.toml  build.rs
libglycin-rebind/libglycin-rebind/sys/src/: lib.rs
libglycin-rebind/libglycin-rebind/sys/tests/: abi.rs  constant.c  layout.c
libglycin/doc/: libglycin-gtk4.toml  libglycin.toml
libglycin/include/: glycin-gtk4.h  glycin.h
libglycin/libglycin-gtk4/: Cargo.toml  build.rs
libglycin/libglycin-gtk4/src/: lib.rs
libglycin/src/: common.rs  creator.rs  encoded_image.rs  error.rs  frame.rs  frame_details.rs  frame_request.rs  functions.rs  image.rs  lib.rs  loader.rs  memory_format.rs  new_frame.rs  new_image.rs  pixel_density.rs
loaders/: meson.build
loaders/glycin-heif/: Cargo.toml  glycin-heif.conf  glycin-heif.thumbnailer.in
loaders/glycin-heif/src/: editing.rs  main.rs
loaders/glycin-image-rs/: Cargo.toml  glycin-image-rs.conf  glycin-image-rs.thumbnailer.in
loaders/glycin-image-rs/src/: editor.rs  main.rs
loaders/glycin-image-rs/src/editor/: jpeg.rs  png.rs
loaders/glycin-jxl/: Cargo.toml  glycin-jxl.thumbnailer.in
loaders/glycin-jxl/src/: main.rs
loaders/glycin-raw/: Cargo.toml  glycin-raw.conf  glycin-raw.thumbnailer.in
loaders/glycin-svg/: Cargo.toml  glycin-svg.conf  glycin-svg.thumbnailer.in
news.d/: README.md
news.d/1.1.1/: fixed-gzip-file-format-not-detected
news.d/1.1.2/: added-log-loader-output  (+4 more)
supply-chain/: audits.toml  config.toml
tests/: Cargo.toml  change_memory_format.rs  dbus_api_stability.rs  editing.rs  encoding.rs  glycin-test.rs  libglycin.py  other.rs  processor-creator.rs  processor-editor.rs  processor-loader.rs  tests.rs  utils.rs
thumbnailer/: meson.build
tools/: Cargo.toml
(+152 files in other folders)
