[workspace.package]
version = "2.0.0-alpha"
authors = ["Sophie Herold"]
description = "Sandboxed image decoding"
license = "MPL-2.0 OR LGPL-2.1-or-later"
homepage = "https://gitlab.gnome.org/sophie-h/glycin"
repository = "https://gitlab.gnome.org/sophie-h/glycin"
edition = "2021"
rust-version = "1.76"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package]
zbus.opt-level = "z"
zvariant.opt-level = "z"

[profile.dev.package.image]
opt-level = 3

[workspace]
resolver = "2"
members = [
    "glycin",
    "glycin-utils",
    "libglycin",
    "libglycin/libglycin-gtk4",
    "loaders/*",
    "tests",
    "tools",
]
default-members = ["glycin", "glycin-utils"]

[workspace.lints.clippy]
arithmetic_side_effects = "forbid"
cast_possible_truncation = "forbid"
cast_possible_wrap = "forbid"

[workspace.dependencies]
async-fs = "2.1.0"
async-global-executor = "2.4.1"
async-io = "2.3.2"
async-lock = "3.3.0"
futures-channel = "0.3.30"
futures-lite = { version = "2.1.0" }
futures-task = "0.3.30"
futures-util = "0.3.30"
gdk = { package = "gdk4", git = "https://github.com/gtk-rs/gtk4-rs.git", features = [
    "v4_12",
], branch = "master" }
gio = { version = "0.20.0", git = "https://github.com/gtk-rs/gtk-rs-core.git", branch = "master" }
glib = { version = "0.20.0", git = "https://github.com/gtk-rs/gtk-rs-core.git", branch = "master" }
glycin = { path = "glycin/", default-features = false }
glycin-utils = { version = "2.0.0-alpha", path = "glycin-utils/", default-features = false }
gufo-common = { version = "0.1.0", git = "https://github.com/gufo-rs/gufo.git", features = [
    "serde",
] }
gufo-jpeg = { version = "0.1.0", git = "https://github.com/gufo-rs/gufo.git" }
gufo-exif = { version = "0.1.0", git = "https://github.com/gufo-rs/gufo.git" }
image = { version = "0.25.1" }
kamadak-exif = "0.5.5"
lcms2 = "6.0.3"
lcms2-sys = "4.0.4"
libc = "0.2.152"
libseccomp = "0.3.0"
memfd = "0.6.3"
memmap = { package = "memmap2", version = "0.9.0" }
nix = { version = "0.27.0", features = ["fs", "resource", "signal"] }
paste = "1.0.0"
rmp-serde = "1.3.0"
safe-transmute = "0.11.2"
serde = { version = "1.0.162", features = ["derive"] }
static_assertions = { version = "1.1.0" }
thiserror = "1.0.57"
tokio = { version = "1.35.1", features = ["fs", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
zbus = { version = "4.2.2", default-features = false, features = [
    "p2p",
], git = "https://github.com/dbus2/zbus.git" }
