[workspace.package]
version = "2.0.0-alpha"
authors = ["Sophie Herold"]
description = "Sandboxed image decoding"
license = "MPL-2.0 OR LGPL-2.1-or-later"
homepage = "https://gitlab.gnome.org/sophie-h/glycin"
repository = "https://gitlab.gnome.org/sophie-h/glycin"
edition = "2021"
rust-version = "1.76"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package]
zbus.opt-level = "z"
zvariant.opt-level = "z"

[profile.dev.package.image]
opt-level = 3

[workspace]
resolver = "2"
members = [
    "glycin",
    "glycin-utils",
    "libglycin",
    "libglycin/libglycin-gtk4",
    "loaders/*",
    "tests",
    "tools",
]
default-members = ["glycin", "glycin-utils"]

[workspace.lints.clippy]
arithmetic_side_effects = "forbid"
cast_possible_truncation = "forbid"
cast_possible_wrap = "forbid"

[workspace.dependencies]
async-fs = "2.1.0"
async-io = "2.3.2"
async-lock = "3.3.0"
blocking = "1.6.1"
env_logger = "0.11.0"
yeslogic-fontconfig-sys = "5.0.0"
futures-channel = "0.3.30"
futures-lite = { version = "2.1.0" }
futures-task = "0.3.30"
futures-util = "0.3.30"
futures-timer = "3.0.3"
gdk = { package = "gdk4", git = "https://github.com/gtk-rs/gtk4-rs.git", features = [
    "v4_12",
], branch = "master" }
gio = { version = "0.20.0", git = "https://github.com/gtk-rs/gtk-rs-core.git", branch = "master" }
glib = { version = "0.20.0", git = "https://github.com/gtk-rs/gtk-rs-core.git", branch = "master" }
glycin = { path = "glycin/", default-features = false }
glycin-utils = { version = "2.0.0-alpha", path = "glycin-utils/", default-features = false }
gufo-common = { version = "0.1.0-alpha", features = ["serde"] }
gufo-exif = { version = "0.1.0-alpha" }
gufo-jpeg = { version = "0.1.0-alpha" }
image = { version = "0.25.1", default-features = false }
kamadak-exif = "0.5.5"
lcms2 = "6.0.3"
lcms2-sys = "4.0.4"
libc = "0.2.152"
libseccomp = "0.3.0"
log = "0.4.0"
memfd = "0.6.3"
memmap = { package = "memmap2", version = "0.9.0" }
nix = { version = "0.29.0", features = ["fs", "resource", "signal"] }
paste = "1.0.0"
rmp-serde = "1.3.0"
safe-transmute = "0.11.2"
serde = { version = "1.0.162", features = ["derive"] }
static_assertions = { version = "1.1.0" }
system-deps = "7.0"
thiserror = "1.0.57"
tokio = { version = "1.35.1", features = ["fs", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
tracing = "0.1.40"
zbus = { version = "4.3.0", default-features = false, features = ["p2p"] }
tracing-subscriber = { version = "0.3.0", features = ["env-filter", "fmt"] }
