[workspace.package]
version = "2.0.1"
authors = ["Sophie Herold"]
description = "Sandboxed image decoding"
license = "MPL-2.0 OR LGPL-2.1-or-later"
homepage = "https://gitlab.gnome.org/sophie-h/glycin"
repository = "https://gitlab.gnome.org/sophie-h/glycin"
edition = "2021"
rust-version = "1.77"

[profile.release]
lto = true
codegen-units = 1
#panic = "abort"
debug = "full"

[profile.release.package]
zbus.opt-level = "z"
zvariant.opt-level = "z"

[profile.dev.package.image]
opt-level = 3

[workspace]
resolver = "2"
members = [
    "glycin",
    "glycin-utils",
    "libglycin",
    "libglycin/libglycin-gtk4",
    "loaders/*",
    "tests",
    "tools",
]
default-members = ["glycin", "glycin-utils"]

[workspace.lints.clippy]
arithmetic_side_effects = "forbid"
cast_possible_truncation = "forbid"
cast_possible_wrap = "forbid"

[workspace.dependencies]
async-fs = "2.1.0"
async-io = "2.3.2"
async-lock = "3.3.0"
blocking = "1.6.1"
cairo-rs = "0.20"
env_logger = { version = "0.11.0", default-features = false, features = [
    "humantime",
] }
futures-channel = "0.3.30"
futures-lite = { version = "2.1.0" }
futures-task = "0.3.30"
futures-timer = "3.0.3"
futures-util = "0.3.30"
gdk = { package = "gdk4", version = "0.9.0", features = ["v4_12"] }
gio = { version = "0.20.0" }
glib = { version = "0.20.0" }
glycin = { path = "glycin/", default-features = false }
glycin-utils = { version = "2.0.0", path = "glycin-utils/", default-features = false }
gufo-common = { version = "0.1.0", features = ["serde"] }
gufo-exif = { version = "0.1.0" }
gufo-jpeg = { version = "0.1.0" }
image = { version = "0.25.2", default-features = false }
kamadak-exif = "0.5.5"
lcms2 = "6.0.3"
lcms2-sys = "4.0.4"
libc = "0.2.152"
libseccomp = "0.3.0"
log = "0.4.0"
memfd = "0.6.3"
memmap = { package = "memmap2", version = "0.9.0" }
nix = { version = "0.29.0", features = ["fs", "resource", "signal"] }
paste = "1.0.0"
rmp-serde = "1.3.0"
safe-transmute = "0.11.2"
serde = { version = "1.0.162", features = ["derive"] }
static_assertions = { version = "1.1.0" }
system-deps = "7.0"
thiserror = "1.0.57"
tokio = { version = "1.35.1", features = ["fs", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["env-filter", "fmt"] }
yeslogic-fontconfig-sys = "6.0.0"
zbus = { version = "4.3.0", default-features = false, features = ["p2p"] }
