[package]
name = "glycin-common"
version = "1.0.0-beta"
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
zvariant.workspace = true
memmap.workspace = true
nix.workspace = true
thiserror.workspace = true
bitflags.workspace = true
gufo-common.workspace = true
zerocopy.workspace = true
paste.workspace = true
glib = { workspace = true, optional = true }
half.workspace = true
rmp-serde.workspace = true

[features]
default = []
gobject = ["dep:glib"]
