[package]
name = "glycin-thumbnailer"
publish = false
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gio.workspace = true
png.workspace = true
image.workspace = true

[dependencies.glycin]
package = "libglycin-rebind"
path = '../libglycin-rebind/libglycin-rebind'

[lints]
workspace = true
