[package]
name = "glycin-utils"
version = "4.0.0-alpha.6"
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-lock.workspace = true
blocking.workspace = true
bitflags.workspace = true
futures-lite = { workspace = true, optional = true }
futures-util.workspace = true
half.workspace = true
image = { workspace = true, optional = true }
libseccomp.workspace = true
memmap.workspace = true
nix = { workspace = true, features = ["fs", "signal"] }
serde.workspace = true
zbus.workspace = true
thiserror.workspace = true
libc.workspace = true
gufo-common.workspace = true
paste.workspace = true
glib = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
log.workspace = true
env_logger.workspace = true
zerocopy.workspace = true
rayon.workspace = true
glycin-common.workspace = true

[features]
default = ["async-io"]
async-io = ["zbus/async-io"]
tokio = ["dep:tokio", "zbus/tokio"]
image-rs = ["dep:image", "loader-utils"]
loader-utils = ["dep:futures-lite"]
gobject = ["glib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
