[package]
name = "libglycin"
version = "2.0.0-alpha.0"
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-io.workspace = true
futures-task.workspace = true
gio.workspace = true
glycin = { workspace = true, features = ["async-io", "gobject"] }

[lib]
name = "glycin"
crate-type = ["cdylib"]
