[package]
name = "libglycin"
version = "2.0.0-rc"
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-global-executor.workspace = true
futures-task.workspace = true
gio.workspace = true
glib.workspace = true
glycin = { workspace = true, features = ["async-io", "gobject"] }
tracing-subscriber.workspace = true
tracing.workspace = true

[lib]
name = "glycin"
crate-type = ["cdylib"]
