[package]
name = "tests"
publish = false
license.workspace = true

version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["async-io"]
async-io = ["glycin/async-io", "glycin-utils/async-io"]
tokio = ["glycin/tokio", "glycin-utils/tokio"]

[dev-dependencies]
glycin = { workspace = true, features = ["gdk4"] }
glycin-utils = { workspace = true, features = ["loader-utils"] }
gio.workspace = true
async-global-executor.workspace = true
tokio.workspace = true
gdk.workspace = true
zbus = { workspace = true, features = ["p2p"] }

[[test]]
name = "tests"
path = "tests.rs"

[[test]]
name = "dbus_api_stability"
path = "dbus_api_stability.rs"
