[package]
name = "glycin-jxl"
version = "2.0.0-beta.6"
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glycin-utils = { workspace = true, features = ["async-io", "loader-utils"] }
glycin-common.workspace = true
gufo-common.workspace = true
jpegxl-rs = { version = "0.11", default-features = false }
jpegxl-sys = { version = "=0.11", default-features = false }
zerocopy.workspace = true
