[package]
name = "libglycin-gtk4-rebind"
version = "0.0.1"
authors = ["Maximiliano Sandoval <msandova@gnome.org>"]
edition.workspace = true
rust-version.workspace = true
readme = "../README.md"
description = "Safe bindings for libglycin-gtk4"
license = "MIT"
homepage.workspace = true
repository.workspace = true
# TODO
# documentation = ""
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "gnome", "glycin", "GUI"]
exclude = ["Gir.toml"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = '0.2'

[dependencies.glib]
version = "0.21"

[dependencies.gio]
version = "0.21"

[dependencies.gdk]
package = "gdk4"
version = "0.10"

[dependencies.gly]
package = "libglycin-rebind"
path = "../libglycin-rebind"
version = "0.0.1"

[dependencies.ffi]
package = "libglycin-gtk4-rebind-sys"
path = './sys'
version = "0.0.1"
