[package]
name = "libglycin-rebind"
version = "0.0.1"
authors = ["Maximiliano Sandoval <msandova@gnome.org>"]
edition.workspace = true
rust-version.workspace = true
readme = "../README.md"
description = "Safe bindings for libglycin"
license = "MIT"
# TODO
# documentation = ""
homepage.workspace = true
repository.workspace = true
categories = ["api-bindings"]
keywords = ["gnome", "glycin"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = '0.2'

[dependencies.glib]
version = "0.21"

[dependencies.gio]
version = "0.21"

[dependencies.ffi]
package = "libglycin-rebind-sys"
path = './sys'
version = "0.0.1"
