[package]
name = "glycin-heif"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glycin-utils = { workspace = true, features = ["async-io", "loader-utils"] }
libheif-rs = { version = "1.0.2", default-features = false }
safe-transmute.workspace = true
