[package]
name = "glycin-image-rs"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glycin-utils = { workspace = true, features = ["async-io", "image-rs"] }
image.workspace = true
kamadak-exif.workspace = true
gufo-common.workspace = true
gufo-jpeg.workspace = true
gufo-exif.workspace = true
