[package]
name = "glycin-image-rs"
version = "1.2.2"
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glycin-utils = { workspace = true, features = ["async-io", "image-rs"] }
gufo-common.workspace = true
gufo-exif.workspace = true
gufo.workspace = true
gufo-jpeg = { workspace = true, features = ["encoder"] }
image = { workspace = true, features = [
    "bmp",
    "dds",
    "exr",
    "ff",
    "gif",
    "hdr",
    "ico",
    "jpeg",
    "png",
    "pnm",
    "qoi",
    "tga",
    "tiff",
    "webp",
] }
log.workspace = true
jpeg-encoder = "0.6.0"
# Force newer version for bugfixes
zune-jpeg = "0.4.19"
png = "0.17.16"
