[package]
name = "glycin-jxl"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glycin-utils = { workspace = true, features = [
    "async-io",
    "loader-utils",
    "image-rs",
] }
jpegxl-rs = { version = "=0.10.3", default-features = false, features = [
    "image",
] }
jpegxl-sys = { version = "=0.10.3", default-features = false }
safe-transmute.workspace = true
