[package]
name = "glycin-raw"
version.workspace = true
authors = ["Hubert Figuière <hub@figuiere.net>"]
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glycin-utils = { workspace = true, features = ["async-io", "loader-utils"] }
libopenraw = "=0.4.0-alpha.7"
