[package]
name = "libglycin-gtk4-rebind-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"
links = "glycin-gtk4-2"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "gnome", "glycin", "GUI"]
description = "FFI bindings for libglycin"
license = "MIT"

[package.metadata.system-deps.glycin_2]
name = "glycin-2"
version = "2.0.1"

[package.metadata.system-deps.glycin_gtk4_2]
name = "glycin-gtk4-2"
version = "2.0.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "libglycin_gtk4_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "main"
version = "0.22"

[dependencies.gdk-sys]
package = "gdk4-sys"
git = "https://github.com/gtk-rs/gtk4-rs"
branch = "main"
version = "0.11"

[dependencies.gly-sys]
package = "libglycin-rebind-sys"
path = "../../libglycin/sys"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
