[package]
name = "libglycin-gtk4-rebind-sys"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
links = "glycin-gtk4-2"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "gnome", "glycin", "GUI"]
description = "FFI bindings for libglycin-gtk4"
license = "MIT"
homepage.workspace = true
repository.workspace = true

[package.metadata.system-deps.glycin_2]
name = "glycin-2"
version = "2.0.1"

[package.metadata.system-deps.glycin_gtk4_2]
name = "glycin-gtk4-2"
version = "2.0.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
version = "0.21"

[dependencies.gdk-sys]
package = "gdk4-sys"
version = "0.10"

[dependencies.gly-sys]
package = "libglycin-rebind-sys"
path = "../../libglycin-rebind/sys"
version = "0.0.1"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
