[package]
name = "libglycin-rebind-sys"
version = "0.0.1"
links = "glycin-2"
edition.workspace = true
rust-version.workspace = true
categories = ["api-bindings"]
keywords = ["gnome", "glycin"]
description = "FFI bindings for libglycin"
license = "MIT"
homepage.workspace = true
repository.workspace = true
exclude = ["Gir.toml"]

[package.metadata.system-deps.glycin_2]
name = "glycin-2"
version = "2"

[package.metadata.system-deps.glycin_2.v2]
version = "2"

[package.metadata.system-deps.glycin_2.v2_0_1]
version = "2.0.1"

[package.metadata.docs.rs]
features = []
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
version = "0.21"

[dependencies.glib-sys]
version = "0.21"

[dependencies.gobject-sys]
version = "0.21"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
